c3p0-0.10.0-pre1
	-- Fix doc comments no longer acceptable under persnicketty JDK 11
	-- Build with JDK 11 JVM (still emitting JDK 1.6 compatible sources)
	-- Get tests working under new mill build
	-- Reorganize to switch build from ant to mill
	-- Update to mchange-commons-java 0.2.20
c3p0-0.9.5.5
	-- Update docs to describe new com.mchange.v2.log.MLog.useRedirectableLoggers setting, implemented
	   in mchange-commons-java 0.2.19
	-- Update to mchange-commons-java 0.2.19
	-- Properly implement the JDBC 4.1 abort method. Thanks to Andrew Johnson for calling attention
	   to this issue.
c3p0-0.9.5.4
        -- Disabling entity expansions, as we did in v.0.9.5.3 turns out not to be sufficient to prevent all
	   XML-config parsing related attacks (if an attacker can control the XML config file that will be
	   parsed). We now make XML parsing much more restrictove by default, but allow users to revert to the
	   old, permissive pre-0.9.5.3 behavior by setting config property 'com.mchange.v2.c3p0.cfg.xml.usePermissiveParser'
	   to true. That property replaces and leaves deprecated the 'com.mchange.v2.c3p0.cfg.xml.expandEntityReferences'
	   property introduced on 0.9.5.3. Many thanks to Aaron Massey (amassey) at HackerOne for calling attention
	   to the continued vulnerability of XML parsing to these kinds of attacks.
        -- Address situation where a throwable during forceKillAcquires() left the force_kill_acquires flag
	   set to true, making it impossible for the pool to restart acquisition attempts on recovery. We
	   now unset the flag under any circumstance, but log interrupts or unexpected throwables, and make
	   a best effort to complete the intended expiration of waiting clients by throwing InterruptException
	   Many thanks to Stefan Cordes (rscadrde on github), Vipin Nair (swvist on github), and Łukasz Jąder
	   (ljader on github) for their work on this issue.
c3p0-0.9.5.3